--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-apiUrl="http://127.0.0.1:8000/api"
-storageUrl="http://127.0.0.1:8000"
-NEXT_PUBLIC_API_URL="http://127.0.0.1:8000"
+apiUrl="https://weltewhome.uz/api"
+storageUrl="https://weltewhome.uz"
+NEXT_PUBLIC_API_URL="https://weltewhome.uz"
