--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "daisyui": "^2.51.1",
-    "next": "latest",
+    "eslint-config-next": "^13.3.0",
+    "next": "^13.3.0",
     "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^8.1.0",
     "next-yandex-metrika": "^1.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
