--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "swiper": "^9.1.1",
-    "yet-another-react-lightbox": "^3.1.0"
+    "yet-another-react-lightbox": "^3.1.0",
+    "ymaps": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "18.14.1",
